# Toshokan

./: .gitignore  CMakeLists.txt  Makefile  README.md  SConstruct  Vagrantfile  build_rule.mk  call_interface.c  call_interface.h  callback.cc  channel.h  common.h  common.mk  cpu_hotplug.c  cpu_hotplug.h  create_prog_file.py  debugvm.sh  depftom_dev.c  depftom_dev.h  deploy.c  deploy.h  deploy_data.c  deploy_data.h  deploy_dev.c  deploy_interface.c  document.md  exec_bin.cc  ext.js  gen_makefile.sh  index.html  index.md  init.cc  load.cc  main.c  mem_rw.cc  memrw.cc  memrw.h  navigation.md  print.cc  qemu.sh  (+12 more)
.circleci/: config.yml
ELFtoImg/: Makefile  elf_loader.c  elf_loader.h  elfhead.h  main.c
ELFtoImg/Test/: Makefile  common.h  kernel.ld  main.c  startup.s  string.h  time.c  time.h  uart.c  uart.h
FriendDumper/: Makefile  dumper_dev.c  dumper_dev.h  main.c  run.sh
FriendLoader/: Makefile  call_interface.c  call_interface.h  common.h  cpu_hotplug.c  cpu_hotplug.h  cpudevice.c  cpudevice.h  debug_mem.c  debug_mem.h  deploy.c  deploy.h  deploy_dev.h  deploy_interface.h  main.c  memory.h  run.sh  trampoline.c  trampoline.h  trampoline_loader.c  trampoline_loader.h  version.c  version.h
FriendLoader/trampoline/: Makefile  boot_trampoline.ld  bootentry.S  build_rule.mk  channel.h  int.cc  int.h  int_asm.S  main.cc  memory.h
callback/test/: Makefile
common/: SConscript  _export.h  _memory.h  align.h  channel.h  channel2.h  channel_accessor.h  channel_accessor2.h  dummy.cc  memory.h  memrw.h  offload.S  offload.h  result.h  symbol.h  version.h
common/tests/: Makefile  SConscript  align.cc  channel.cc  channel_accessor.cc  channel_accessor2.cc  main.cc  offload.cc  result.cc  rules.yml
docker/: build.sh  build_friend.sh  build_hakase.sh  build_intermediate.sh  build_qemu_bin.sh  config  gdb.sh  id_rsa  id_rsa.pub  inittab  interfaces  qemu.sh  qemu_debug.sh  qemu_intermediate.sh  qemu_intermediate_with_kvm.sh  qemu_kernel.sh  qemu_kernel_image.sh  rootfs.sh  rootfs_debug.sh  ssh.sh  ssh_intermediate.sh  tools.sh  wait-for-rsync
elf_loader/: Makefile  hakase.cc  hakase.h
elf_loader/test/: Makefile  friend.cc  hakase.cc
friend/: SConscript  assert.h  boot.S  export.h  friend.ld  init.cc  offload.h  panic.h  stddef.h  type.h
hakase/: Makefile  SConscript  build_rule.mk  channel.h  elf_loader.cc  elf_loader.h  export.h  friend_boot16.S  hakase.cc  hakase.h  hakase.ld  interrupt.h  loader16.cc  loader16.h  memrw.h  panic.h  print.cc  print.h  simple_loader.cc  simple_loader.h  test_build_rule.mk
hakase/FriendLoader/: Makefile  call_interface.c  common.h  cpu_hotplug.c  cpu_hotplug.h  debug_mem.c  debug_mem.h  deploy.c  deploy.h  friend_loader.ko  main.c  run.sh  trampoline_loader.c  trampoline_loader.h  type.h
hakase/tests/: CMakeLists.txt  Makefile  SConscript  init.cc  rules.yml  test.cc  test.h  test_hakase.sh  test_library.sh
hakase/tests/callback/: hakase.cc
hakase/tests/elf_loader/: CMakeLists.txt  friend.cc  hakase.cc
hakase/tests/interrupt/: friend.cc  hakase.cc  int.cc
hakase/tests/memrw/: reading_signature.cc  rules.yml  rw_common.cc  rw_large.cc  rw_small.cc
hakase/tests/print/: hakase.cc
hakase/tests/result/: build_rule.mk  return_error.cc  unwrap_when_noerror.cc
hakase/tests/simple_loader/: CMakeLists.txt  hakase.cc  raw.cc  raw.ld
include/: _memory.h  channel.h  channel2.h  memory.h  panic.h  result.h  symbol.h
interrupt/: hakase.cc  hakase.h
intro/: 001.md  002.md  003.md  004.md  011.md  012.md  013.md  index.md
joshu/: Makefile  channel.h  int.h  int_asm.S  joshu.cc  joshu.ld  memory.h  type.h
loader/: Makefile  exec.cc  raw.c  raw.ld  start_raw.S
memrw/: Makefile  data_size.cc  hakase.h  invalid.cc  reading_signature.cc  rw.cc
paging/: 001.md  002.md  003.md  011.md  012.md  013.md  014.md  021.md  022.md  023.md  024.md  031.md  032.md  033.md  034.md  035.md  041.md  042.md  index.md
print/: hakase.cc
result/: Makefile  error.cc  ignore_when_error.cc  ignore_when_noerror.cc  noerror.cc  notchecked_when_error.cc  notchecked_when_noerror.cc  test_ignore_when_error.cc  test_ignore_when_noerror.cc  unwrap_when_error.cc  unwrap_when_noerror.cc
rule_generator/: base.yml  build.tpl  common_test.tpl  dirs.yml  friend_bin.tpl  gen_build_rules.py  hakase_bin.tpl  makefile.tpl
sample/: .gitignore  Makefile  build_rules.mk  friend.cc  friend_boot.S  hakase.cc  shared.h
sample2/: Makefile  friend.cc  friend_boot.S  hakase.cc
script/: build_container.sh  check_trampoline_bin_size.sh  generate_wrappers.sh  transfer.sh
simple_loader/: Makefile  hakase.cc  hakase.h
sync/: aarch64.sh  arm_provision.sh  qemu.sh  run_arm.sh
test/: Makefile  build_rule.mk  callback.cc  print.cc  test.cc  test.h  test_library.sh
tests/: SConscript  build_rule.mk  interrupt.cc  main.cc  print.cc  test.cc
tools/: build_rules.mk
trampoline/: Makefile  boot_trampoline.ld  boot_trampoline16.ld  bootentry.S  bootentry16.S  channel.h  entry.S  int.cc  int.h  int_asm.S  main.cc  memory.h  trampoline.h  trampoline.ld  type.h
tutorial/: README.md  README.md.tpl  build.py  macro.tpl  pages.yml  settings.yml
tutorial_template/: README.md.tpl  build.py  macro.tpl  pages.yml  settings.yml
(+379 files in other folders)
